src/widgets/snapshots/tvision__widgets__editor__tests__memo_snapshot.snap
---
source: src/widgets/editor.rs
expression: screen.snapshot()
---
size: 20x4
cursor: hidden
text:
|line one            |
|line two            |
|                    |
|                    |
attr:
|aaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=RGB(255,255,85) bg=RGB(0,0,170)
