src/widgets/snapshots/tvision__widgets__editor__tests__replace_dialog_layout.snap
---
source: src/widgets/editor.rs
expression: screen.snapshot()
---
size: 40x16
cursor: hidden
text:
|┌────────────── Replace ───────────────┐|
|│                                      │|
|│  Text to find                        │|
|│   foo                           ▐↓▌  │|
|│                                      │|
|│  New text                            │|
|│   bar                           ▐↓▌  │|
|│                                      │|
|│   [X] Case sensitive                 │|
|│   [ ] Whole words only               │|
|│   [X] Prompt on replace              │|
|│   [ ] Replace all                    │|
|│                                      │|
|│                    OK   ▄   Cancel ▄ │|
|│                  ▀▀▀▀▀▀▀▀   ▀▀▀▀▀▀▀▀ │|
|└──────────────────────────────────────┘|
attr:
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaabaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaacccccccccccccccccccccccccccccccdedaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaabaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaacccccccccccccccccccccccccccccccdedaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaafffffgffffffffffffffffffffffffffffaaa|
|aaafffffgffffffffffffffffffffffffffffaaa|
|aaafffffgffffffffffffffffffffffffffffaaa|
|aaafffffgffffffffffffffffffffffffffffaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaeeeeheeeaaaeeeeeeeeaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=RGB(0,0,0) bg=RGB(170,170,170)
  b fg=RGB(255,255,85) bg=RGB(170,170,170)
  c fg=RGB(255,255,255) bg=RGB(0,0,170)
  d fg=RGB(0,170,0) bg=RGB(170,170,170)
  e fg=RGB(0,0,0) bg=RGB(0,170,0)
  f fg=RGB(0,0,0) bg=RGB(0,170,170)
  g fg=RGB(255,255,85) bg=RGB(0,170,170)
  h fg=RGB(255,255,85) bg=RGB(0,170,0)
