src/widgets/snapshots/tvision__widgets__editor__tests__snapshot_two_lines_with_selection.snap
---
source: src/widgets/editor.rs
expression: screen.snapshot()
---
size: 12x4
cursor: hidden
text:
|hello       |
|world       |
|            |
|            |
attr:
|abbbbaaaaaaa|
|aaaaaaaaaaaa|
|aaaaaaaaaaaa|
|aaaaaaaaaaaa|
legend:
  . default
  a fg=RGB(255,255,85) bg=RGB(0,0,170)
  b fg=RGB(0,0,170) bg=RGB(170,170,170)
